revert to ttf font to fix layout problems close #82

--- a/server/styles/scss/_page.scss
+++ b/server/styles/scss/_page.scss
@@ -260,7 +260,7 @@ body {
 
 @font-face {
 	font-family: 'Star4000 Large';
-	src: url('../fonts/Star4000 Large.woff') format('woff');
+	src: url('../fonts/Star4000 Large.ttf') format('truetype');
 	font-display: swap;
 }
 
